codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__explicit_prompt_selection_anchors_prompt_in_upper_third.snap
---
source: tui/src/pager_overlay.rs
expression: "buffer_to_text(&buf, area)"
---
 Transcript (verbose) ──────────────────────────────────────
before-11


› second


after-0
after-1
after-2
after-3
────────────────────────────────────────────── 2 / 2 · 65% ─
 ↑/↓ scroll   ←/→ prompts   pgup/pgdn page   home/end jump
 q   ctrl + o   ⌥ + r   v   esc/←   →   enter
