codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__static_overlay_snapshot_basic.snap
---
source: tui/src/pager_overlay.rs
expression: term.backend()
---
" S T A T I C · 100% ────────────────────"
"one                                     "
"two                                     "
"three                                   "
"~                                       "
"~                                       "
<<<<<<< f12747ca5e6eb85d32a823b9450726c76ffbb93e
"────────────────────────────────────────"
" ↑/↓   pgup/pgdn   home/end             "
" q quit                                 "
=======
"───────────────────────────────── 100% ─"
" ↑/↓ to scroll   pgup/pgdn to page   hom"
" q close                                "
>>>>>>> 7f83d4922d7e92a36c1c1e4f61159a5815d45360
"                                        "
