codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__static_overlay_wraps_long_lines.snap
---
source: tui/src/pager_overlay.rs
expression: term.backend()
---
" S T A T I C · 0% ──────"
"a very long line that   "
"should wrap when        "
"rendered within a narrow"
<<<<<<< f12747ca5e6eb85d32a823b9450726c76ffbb93e
"────────────────────────"
" ↑/↓   pgup/pgdn        "
" q quit                 "
=======
"─────────────────── 0% ─"
" ↑/↓ to scroll   pgup/pg"
" q close                "
>>>>>>> 7f83d4922d7e92a36c1c1e4f61159a5815d45360
"                        "
