codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_apply_patch_scroll_vt100.snap
---
source: tui/src/pager_overlay.rs
expression: snapshot
---
 Transcript: verbose ───────────────────────────────────────────────────────────
• Added foo.txt (+2 -0)
    1 +hello
    2 +world

• Added foo.txt (+2 -0)
    1 +hello
    2 +world
<<<<<<< f12747ca5e6eb85d32a823b9450726c76ffbb93e
─────────────────────────────────────────────────────────────────── 0 / 0 · 0% ─
 ↑/↓ scroll   ←/→ prompts   pgup/pgdn page   home/end jump
 q quit   ctrl + o copy   ⌥ + r raw render   v compact view   esc/← prev
=======
─────────────────────────────────────────────────────────────────────────── 0% ─
 ↑/↓ to scroll   pgup/pgdn to page   home/end to jump
 q close   esc to edit prev
>>>>>>> 7f83d4922d7e92a36c1c1e4f61159a5815d45360
