codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_footer_status_narrow.snap
---
source: tui/src/pager_overlay.rs
expression: "render_snapshot(&mut overlay, Rect::new(0, 0, 28, 8),)"
---
 Transcript (verbose) ──────

› prompt

───────────── 1 / 1 · 100% ─
No agent response to copy f…
 q   ctrl + o   ⌥ + r   v
