codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_snapshot_basic.snap
---
source: tui/src/pager_overlay.rs
expression: term.backend()
---
" Transcript: verbose ───────────────────"
"alpha                                   "
"                                        "
"beta                                    "
"                                        "
"gamma                                   "
<<<<<<< f12747ca5e6eb85d32a823b9450726c76ffbb93e
"───────────────────────── 0 / 0 · 100% ─"
" ↑/↓   ←/→   pgup/pgdn   home/end       "
" q   ctrl + o   ⌥ + r   v   esc/←       "
=======
"───────────────────────────────── 100% ─"
" ↑/↓ to scroll   pgup/pgdn to page   hom"
" q close   esc to edit prev             "
>>>>>>> 7f83d4922d7e92a36c1c1e4f61159a5815d45360
"                                        "
