codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_scroll_selects_prompt_entering_from_below.snap
---
source: tui/src/pager_overlay.rs
expression: "buffer_to_text(&buf, area)"
---
 Transcript (verbose) ──────────────────────────────────────
answer-4
answer-5
answer-6
answer-7


› second
────────────────────────────────────────────── 2 / 2 · 73% ─
 ↑/↓ scroll   ←/→ prompts   pgup/pgdn page   home/end jump
 q   ctrl + o   ⌥ + r   v   esc/←   →   enter
